--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~17.1.1",
     "@angular/router": "~17.1.1",
     "bcryptjs": "^2.4.3",
+    "minisearch": "^6.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.14.3"
