--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~17.1.1",
     "@angular/router": "~17.1.1",
     "bcryptjs": "^2.4.3",
+    "lodash": "^4.17.21",
     "minisearch": "^6.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -42,7 +43,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "^7.0.0",
+    "protractor": "^3.3.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~5.3.3"
