--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@angular/platform-browser": "~17.1.1",
     "@angular/platform-browser-dynamic": "~17.1.1",
     "@angular/router": "~17.1.1",
+    "apexcharts": "^3.49.1",
     "bcryptjs": "^2.4.3",
+    "echarts": "^5.5.0",
     "lodash": "^4.17.21",
     "minisearch": "^6.3.0",
+    "ng-apexcharts": "^1.10.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.14.3"
